AC_INIT(src/startup.tcl)

SC_SIMPLE_EXEEXT

if test "x${EXEEXT}" = "x"; then
   BIN_EXEEXT=.bin
else
   BIN_EXEEXT=${EXEEXT}
fi

AC_SUBST(BIN_EXEEXT)

AC_PROG_INSTALL

#--------------------------------------------------------------------
# "cygpath" is used on windows to generate native path names for include
# files.
# These variables should only be used with the compiler and linker since
# they generate native path names.
#
# Unix tclConfig.sh points SRC_DIR at the top-level directory of
# the Tcl sources, while the Windows tclConfig.sh points SRC_DIR at
# the win subdirectory.  Hence the different usages of SRC_DIR below.
#
# This must be done before calling SC_PUBLIC_TCL_HEADERS
#--------------------------------------------------------------------

SC_SET_PLATFORM

#--------------------------------------------------------------------
# Find tclsh so that we can run pkg_mkIndex to generate the pkgIndex.tcl
# file during the install process.  Don't run the TCLSH through
# ${CYGPATH} because it's being used directly by make.
# Require that we use a tclsh shell version 8.2 or later since earlier
# versions have bugs in the pkg_mkIndex routine.
#--------------------------------------------------------------------

SC_PROG_TCLSH

#--------------------------------------------------------------------
# Find TclPro Wrapper.
#--------------------------------------------------------------------


AC_PATH_PROGS(PROWRAP, prowrap${EXEEXT}, :, ${exec_prefix}/bin:${PATH})

if test "x${PROWRAP}" = "x:" ; then
    AC_MSG_WARN(No prowrap executable found.  You will not be able to build wrapped executables.)
fi
AC_SUBST(PROWRAP)

AC_PATH_PROGS(PROCOMP, procomp${EXEEXT} procomp0.10 procomp10${EXEEXT}, :, ${exec_prefix}/bin://t/1.3/win32-ix86/bin:${PATH})

if test "x${PROCOMP}" = "x:" ; then
    AC_MSG_WARN(No procomp executable found.  You will not be able to compile tcl scripts.)
fi
AC_SUBST(PROCOMP)

# Check the --enable-symbols option and switch between .tcl and .tbc files.

SC_ENABLE_SYMBOLS

if test "${DBGX}x" = "x" ; then
    FILES='${TBC_FILES}'
    STARTUP_FILE='${STARTUP_TBC}'
else
    FILES='${TCL_FILES}'
    STARTUP_FILE='${STARTUP_TCL}'
fi
AC_SUBST(FILES)
AC_SUBST(STARTUP_FILE)


AC_OUTPUT([Makefile],
	chmod +x ${srcdir}/config/install-sh ${srcdir}/config/mkinstalldirs)
